--- a/blocks/index.css
+++ b/blocks/index.css
@@ -1,4 +1,7 @@
-* {margin: 0; padding: 0;}
+body, div, h1, h2, h3, p, input {
+    margin: 0;
+    padding: 0;
+}
 
 .header {
     display: flex;
@@ -73,8 +76,8 @@
     height: 100%;
     border-radius: 50%;
     background: conic-gradient(
-        #3DBE29 0% 40%, 
-        #FF3E4D 40% 70%, 
+        #3DBE29 0% 40%,
+        #FF3E4D 40% 70%,
         #5B9BF3 70% 100%
     );
     display: flex;
